--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-pwa": "^5.6.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
@@ -28,6 +29,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^1.6.4",
     "@types/uuid": "^9.0.2",
     "prisma": "^5.0.0"
   }
