--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-multi-carousel": "^2.8.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
