--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@types/react-big-calendar": "^1.6.4",
     "@types/uuid": "^9.0.2",
+    "prettier": "^3.0.2",
     "prisma": "^5.0.0"
   }
 }
