--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "format": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/react-big-calendar": "^1.6.4",
     "@types/uuid": "^9.0.2",
+    "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.2",
     "prisma": "^5.0.0"
   }
