feat: prettier 설정 추가 및 변경

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,8 @@
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "bracketSameLine": false,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "singleAttributePerLine": true
 }
