--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write ."
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
@@ -21,14 +23,19 @@
     "next-pwa": "^5.6.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-multi-carousel": "^2.8.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/react-big-calendar": "^1.6.4",
     "@types/uuid": "^9.0.2",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.2",
     "prisma": "^5.0.0"
   }
 }
