--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.10",
+    "next-auth": "^4.23.1",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
@@ -33,6 +35,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react-big-calendar": "^1.6.4",
     "@types/uuid": "^9.0.2",
     "eslint-config-prettier": "^9.0.0",
