--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react-big-calendar": "^1.6.4",
+    "@types/react-modal": "^3.16.0",
     "@types/uuid": "^9.0.2",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.2",
