--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.4",
