--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma db push && npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --check .",
@@ -19,20 +19,27 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.10",
+    "next-auth": "^4.23.1",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-big-calendar": "^1.8.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react-big-calendar": "^1.6.4",
+    "@types/react-modal": "^3.16.0",
     "@types/uuid": "^9.0.2",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.2",
